--- a/js/emojis-all.html
+++ b/js/emojis-all.html
@@ -1,12 +1,14 @@
 <html>
   <!-- This script only work on all browser. -->
   <head>
+    <meta charset="UTF-8" />
     <script>
-      var emoji = '😄😄';
+      var emoji = '☺️☺️';
       console.log(emoji);
     </script>
-    <title>Random Emoji Color</title>
+    <title>Open console</title>
   </head>
   <body>
+   Open console to see the emojis handled by js.
   </body>
 </html>
